--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,12 @@ file(GLOB PtP_Sources
 
 add_executable(PtP_Chat ${PtP_Sources})
 
-# if(WIN32)
-# 	target_link_libraries(PtP_Chat ws2_32)
-# else()
-#     target_link_libraries(PtP_Chat pthread)
-# endif()
-# target_link_libraries(PtP_Chat m)
+if(WIN32)
+	target_link_libraries(PtP_Chat ws2_32)
+else()
+    target_link_libraries(PtP_Chat pthread)
+endif()
+target_link_libraries(PtP_Chat m)
 
 target_include_directories(PtP_Chat PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
